# quotation_gui

./: .gitignore  TODO.txt  build.py  calculator.py  config.py  data_manager.py  generate_licenses.py  gui.py  legal.py  localization.py  main.py  processor.py  pyproject.toml  style.qss  utils.py
licenses/: EULA.txt  EULA_en.txt  EULA_it.txt  THIRDPARTY_LICENSES.json  THIRDPARTY_LICENSES.txt  generate_licenses.py
styles/: menu_style.qss  style.qss  tab_style.qss
