[project]
name = "quotation-gui"
version = "0.1.0"
description = "Simple quotation software with a graphical user interface."
authors = [{ name = "Marco Conciatori", email = "conciatori.marco91@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "jinja2",
    "Pillow",
    "PySide6",
    "openpyxl",
    "pyinstaller",
    "pyqtdarktheme",
    "openpyxl-image-loader",
]
