[project]
name = "quotation-gui"
version = "0.5.0"
description = "Quotation application with GUI."
authors = [{ name = "Marco Conciatori", email = "conciatori.marco91@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "jinja2",
    "Pillow",
    "PySide6",
    "openpyxl",
    "pyinstaller",
    "pip-licenses",
    "pyqtdarktheme",
    "openpyxl-image-loader",
]
